--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@sveltejs/package": "^2.0.0",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"postcss-load-config": "^4.0.1",
 		"publint": "^0.1.9",
 		"svelte": "^4.0.5",
 		"tslib": "^2.4.1",
